--- a/charts/sscs-tribunals-api/values.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.preview.template.yaml
@@ -18,6 +18,6 @@ java:
 
 ccd-def-cleanup:
   enabled: true
-  change_id: ${CHANGE_ID}
+  change_id: 3575
   case_type_ids:
-    - Benefit
+    - Benefit-sscs-pr
