--- a/charts/sscs-tribunals-api/values.yaml
+++ b/charts/sscs-tribunals-api/values.yaml
@@ -85,6 +85,8 @@ java:
     AMQP_HOST: "sscs-servicebus-{{ .Values.global.environment }}.servicebus.windows.net"
     AMQP_USERNAME: "SendAndListenSharedAccessKey"
 
+idam-pr:
+  enabled: false
 xui-webapp:
   enabled: false
 elastic:
@@ -105,9 +107,9 @@ em-ccdorc:
   enabled: false
 sscs-hearings-api:
   enabled: false
+hmc-cft-hearing-service:
+  enabled: false
 servicebus:
   enabled: false
 ccd-case-document-am-api:
-  enabled: false
-ccd-def-cleanup:
   enabled: false
