--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -300,8 +300,10 @@ sscs-cor-frontend:
         secrets:
           - sscs-cor-idam-client-secret
           - sscs-s2s-secret
-          - sscs-redis-access-key
-          - sscs-redis-connection-string
+          - name: sscs-redis-access-key
+            alias: sscs-cor-redis-access-key
+          - name: sscs-redis-connection-string
+            alias: sscs-cor-redis-connection-string
           - tyacookiesecret
           - idam-sscs-oauth2-client-secret
           - AppInsightsInstrumentationKey
