--- a/charts/sscs-tribunals-api/values.yaml
+++ b/charts/sscs-tribunals-api/values.yaml
@@ -84,9 +84,11 @@ java:
     SECURE_DOC_STORE_FEATURE: true
     WORK_ALLOCATION_FEATURE: false
     HEARINGS_EVENT_QUEUE_NAME: tribunals-to-hearing-api-{{ .Values.global.environment }}
+    CASE_ACCESS_MANAGEMENT_FEATURE: false
     ELINKS_V2_FEATURE_ENABLED: false
     DELETED_REDACTED_DOC_ENABLED: false
     UPLOAD_HEARING_FILTER_ENABLED: false
+    ADD_LINK_TO_OTHER_ASSOCIATED_CASES_V2: false
     IDAM_OAUTH2_CLIENT_ID: "sscs"
     CORE_CASE_DATA_JURISDICTION_ID: SSCS
     CORE_CASE_DATA_CASE_TYPE_ID: Benefit
