--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -143,6 +143,7 @@ feature.elinksV2.enabled: ${ELINKS_V2_FEATURE_ENABLED:false}
 feature.deleted-redacted-doc.enabled: ${DELETED_REDACTED_DOC_ENABLED:false}
 feature.hearing-recording-filter.enabled: ${UPLOAD_HEARING_FILTER_ENABLED:false}
 feature.add-link-to-other-associated-cases-v2.enabled: ${ADD_LINK_TO_OTHER_ASSOCIATED_CASES_V2:false}
+feature.bypass-evidence-share-service.enabled: ${BYPASS_EVIDENCE_SHARE_SERVICE:false}
 
 case_document_am.url=${CASE_DOCUMENT_AM_URL:http://localhost:4455}
 
@@ -168,6 +169,7 @@ jms.password=${JMS_PASSWORD:}
 jms.receiveTimeout=${JMS_RECEIVE_TIMEOUT:30000}
 jms.idleTimeout=${JMS_IDLE_TIMEOUT:30000}
 jms.enabled=${ENABLE_JMS:false}
+jms.evidenceshare.bypass=${JMS_EVIDENCE_SHARE_BYPASS:false}
 
 
 jms.tribunals-to-hearings-api.queue=${JMS_HEARINGS_EVENT_QUEUE_NAME:}
