--- a/charts/sscs-tribunals-api/values.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.preview.template.yaml
@@ -82,6 +82,7 @@ xui-webapp:
 sscs-ccd-callback-orchestrator:
   enabled: ${HEARINGS_ENABLED}
   java:
+    ingressHost: cbo-${SERVICE_FQDN}
     image: hmctspublic.azurecr.io/sscs/ccd-callback-orchestrator:latest
     releaseNameOverride: ${SERVICE_NAME}-sscs-ccd-callback-orchestrator
     readinessDelay: 90
@@ -90,31 +91,6 @@ sscs-ccd-callback-orchestrator:
       TOPIC_NAME: "${SERVICE_NAME}-servicebus-main-topic"
       AMQP_HOST: "sscs-sb-preview.servicebus.windows.net"
       AMQP_USERNAME: "RootManageSharedAccessKey"
-    secrets:
-      AMQP_PASSWORD:
-        secretRef: sscs-sb-preview
-        key: primaryKey
-
-sscs-evidence-share:
-  enabled: ${HEARINGS_ENABLED}
-  java:
-    image: hmctspublic.azurecr.io/sscs/evidence-share:latest
-    releaseNameOverride: ${SERVICE_NAME}-sscs-evidence-share
-    environment:
-      SEND_LETTER_SERVICE_ENABLED: "true"
-      SEND_LETTER_SERVICE_BASEURL: "http://rpe-send-letter-service-aat.service.core-compute-aat.internal"
-      IDAM_API_URL: https://idam-api.aat.platform.hmcts.net
-      DOCUMENT_MANAGEMENT_URL: "http://dm-store-aat.service.core-compute-aat.internal"
-      TOPIC_NAME: "${SERVICE_NAME}-servicebus-main-topic"
-      SUBSCRIPTION_NAME: "${SERVICE_NAME}-servicebus-main-topic"
-      AMQP_HOST: "sscs-sb-preview.servicebus.windows.net"
-      AMQP_USERNAME: "RootManageSharedAccessKey"
-      ROBOTICS_EMAIL_FROM: "sscs@hmcts.net"
-      ROBOTICS_EMAIL_TO: "fake"
-      ROBOTICS_EMAIL_SCOTTISH_TO: "fake2"
-      ROBOTICS_EMAIL_PIP_AE_TO: "fake3"
-      CASE_ACCESS_MANAGEMENT_FEATURE: true
-      ISSUE_GENERIC_LETTER: true
     secrets:
       AMQP_PASSWORD:
         secretRef: sscs-sb-preview
