enable sb connection

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -49,6 +49,9 @@ java:
     AMQP_USERNAME: "RootManageSharedAccessKey"
     HEARINGS_EVENT_QUEUE_NAME: ${SERVICE_NAME}-servicebus-tribunals-to-hearing-api
   secrets:
+    HEARINGS_EVENT_SERVICE_BUS_CONNECTION_STRING:
+      secretRef: sscs-sb-preview
+      key: connectionString
     AMQP_PASSWORD:
       secretRef: sscs-sb-preview
       key: primaryKey
