--- a/build.gradle
+++ b/build.gradle
@@ -221,6 +221,7 @@ sonarqube {
                 "src/main/java/uk/gov/hmcts/reform/sscs/service/coversheet/PdfCoverSheet.java," +
                 "src/main/java/uk/gov/hmcts/reform/sscs/controllers/CreateCaseController.java," +
                 "src/main/java/uk/gov/hmcts/reform/sscs/service/pdf/data/PdfData.java," +
+                "src/main/java/uk/gov/hmcts/reform/sscs/ccd/presumbit/caseupdate/CaseUpdatedAboutToSubmitHandlerTest.java" +
                 "src/main/java/uk/gov/hmcts/reform/sscs/ccd/presubmit/writefinaldecision/esa/EsaWriteFinalDecisionMidEventValidationHandler.java," +
                 "src/main/java/uk/gov/hmcts/reform/sscs/ccd/presubmit/writefinaldecision/uc/UcWriteFinalDecisionMidEventValidationHandler.java"
         property "sonar.host.url", "https://sonar.reform.hmcts.net/"
