--- a/charts/sscs-tribunals-api/values.yaml
+++ b/charts/sscs-tribunals-api/values.yaml
@@ -108,10 +108,9 @@ em-ccdorc:
   enabled: false
 sscs-hearings-api:
   enabled: false
-hmc-cft-hearing-service:
-  enabled: false
 servicebus:
   enabled: false
 ccd-case-document-am-api:
   enabled: false
-
+ccd-def-cleanup:
+  enabled: false
