--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -162,6 +162,8 @@ ccd:
       enabled: ${LOCAL_CCD_ENABLED}
     apiGatewayWeb:
       enabled: ${LOCAL_CCD_ENABLED}
+    postgresql:
+      enabled: ${LOCAL_CCD_ENABLED}
     s2s:
       enabled: false
     elastic:
@@ -601,7 +603,7 @@ sscs-evidence-share:
 # click create
 # azure steps should be repeated every time PR is undeployed from preview
 sscs-tya-notif:
-  enabled: false
+  enabled: true
   java:
     image: hmctspublic.azurecr.io/sscs/tya-notif:latest
     releaseNameOverride: ${SERVICE_NAME}-sscs-tya-notification
