--- a/.github/workflows/ccd-diff.yaml
+++ b/.github/workflows/ccd-diff.yaml
@@ -48,15 +48,12 @@ jobs:
       - name: Generate report
         id: ccd-diff
         run: |
-          REPORT="$(npx -q @hmcts/ccd-diff build/master build/branch)"
-          REPORT="${REPORT//'%'/'%25'}"
-          REPORT="${REPORT//$'\n'/'%0A'}"
-          REPORT="${REPORT//$'\r'/'%0D'}"
-          echo $REPORT
-          echo "::set-output name=content::$REPORT"
+          npx -q @hmcts/ccd-diff build/master build/branch > report.txt
+          REPORT=$(sed -e 's/%/%25/g' -e 's/$/%0A/g' report.txt)
+          echo "content=$REPORT" >> $GITHUB_OUTPUT
       - name: Display
         run: |
-          echo "${{ steps.ccd-diff.outputs.content }}"
+          cat report.txt
       - name: Add report
         uses: thollander/actions-comment-pull-request@v3
         with:
