--- a/.github/workflows/ccd-diff.yaml
+++ b/.github/workflows/ccd-diff.yaml
@@ -55,8 +55,8 @@ jobs:
       - name: Add report
         uses: thollander/actions-comment-pull-request@v3
         with:
+          file-path: report.txt
           message: |
             # CCD diff report
-            $(cat report.txt)
           comment-tag: CCD_diff_report
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
