--- a/.github/workflows/ccd-diff.yaml
+++ b/.github/workflows/ccd-diff.yaml
@@ -48,20 +48,15 @@ jobs:
       - name: Generate report
         id: ccd-diff
         run: |
-          REPORT="$(npx -q @hmcts/ccd-diff build/master build/branch)"
-          REPORT="${REPORT//'%'/'%25'}"
-          REPORT="${REPORT//$'\n'/'%0A'}"
-          REPORT="${REPORT//$'\r'/'%0D'}"
-          echo $REPORT
-          echo "::set-output name=content::$REPORT"
+          echo "# CCD diff report" > report.txt
+          echo "" >> report.txt
+          npx -q @hmcts/ccd-diff build/master build/branch >> report.txt
       - name: Display
         run: |
-          echo "${{ steps.ccd-diff.outputs.content }}"
+          cat report.txt
       - name: Add report
         uses: thollander/actions-comment-pull-request@v3
         with:
-          message: |
-            # CCD diff report
-            ${{ steps.ccd-diff.outputs.content }}
+          file-path: report.txt
           comment-tag: CCD_diff_report
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
