--- a/src/cftlib/resources/docker/cft-lib-em-stack.yml
+++ b/src/cftlib/resources/docker/cft-lib-em-stack.yml
@@ -36,7 +36,7 @@ services:
       retries: 10
     environment:
       - SERVER_PORT=8080
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://shared-database-pg12:5432/emstitch
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://shared-database-pg:5432/emstitch
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
       - S2S_BASE_URI=http://host.docker.internal:4502
