--- a/src/cftlib/resources/docker/cft-lib-work-allocation.yml
+++ b/src/cftlib/resources/docker/cft-lib-work-allocation.yml
@@ -8,7 +8,7 @@ services:
     image:  hmctsprivate.azurecr.io/camunda/bpm:latest
     container_name: wa-camunda-bpm
     environment:
-      CAMUNDA_DB_HOST: shared-database-pg12
+      CAMUNDA_DB_HOST: shared-database-pg
       CAMUNDA_DB_PORT: 5432
       CAMUNDA_DB_USER_NAME: postgres
       CAMUNDA_DB_PASSWORD: "${CAMUNDA_DB_PASSWORD:admin}"
@@ -28,8 +28,8 @@ services:
     image: hmctspublic.azurecr.io/ccd/message-publisher:latest
     container_name: wa-message-publisher
     environment:
-      DATA_STORE_DB_HOST: shared-database-pg12
-      DATA_STORE_DB_URL: jdbc:postgresql://shared-database-pg12:5432/datastore
+      DATA_STORE_DB_HOST: shared-database-pg
+      DATA_STORE_DB_URL: jdbc:postgresql://shared-database-pg:5432/datastore
       DATA_STORE_DB_PORT: 5432
       DATA_STORE_DB_NAME: datastore
       DATA_STORE_DB_OPTIONS: ?stringtype=unspecified&ssl=false
@@ -49,7 +49,7 @@ services:
       CAMUNDA_URL: http://wa-camunda-bpm:8999/engine-rest
       S2S_URL: http://host.docker.internal:4502/
       S2S_SECRET_WORKFLOW_API: "AAAAAAAAAAAAAAAA"
-      POSTGRES_HOST: shared-database-pg12
+      POSTGRES_HOST: shared-database-pg
       POSTGRES_PORT: 5432
       POSTGRES_NAME: wa_workflow_api
       POSTGRES_USERNAME: postgres
@@ -75,7 +75,7 @@ services:
         CCD_URL: http://host.docker.internal:4452
         OPEN_ID_IDAM_URL: http://rse-idam-simulator:5062
         ROLE_ASSIGNMENT_URL: http://host.docker.internal:4096
-        POSTGRES_HOST: shared-database-pg12
+        POSTGRES_HOST: shared-database-pg
         POSTGRES_PORT: 5432
         POSTGRES_NAME: cft_task_db
         POSTGRES_USERNAME: postgres
@@ -99,7 +99,7 @@ services:
       image: "hmctspublic.azurecr.io/wa/case-event-handler:latest"
       container_name: wa-case-event-handler
       environment:
-        POSTGRES_HOST: shared-database-pg12
+        POSTGRES_HOST: shared-database-pg
         POSTGRES_USERNAME: postgres
         POSTGRES_PASSWORD: "${POSTGRES_PASSWORD:admin}"
         POSTGRES_CONNECTION_OPTIONS: "?stringtype=unspecified&gssEncMode=disable"
