--- a/charts/sscs-tribunals-api/values.wa.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.wa.preview.template.yaml
@@ -637,7 +637,7 @@ ccd:
       disableKeyVaults: true
 
   ccd-user-profile-importer:
-    image: hmctspublic.azurecr.io/ccd/user-profile-importer:db2r9a
+    image: hmctspublic.azurecr.io/ccd/user-profile-importer:latest
     environment:
       AUTH_PROVIDER_BASE_URL: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
       CCD_USER_PROFILE_URL: http://${SERVICE_NAME}-ccd-user-profile-api
