SSCSFT-25 UC WCA Journey - Start date
Update functional tests

--- a/src/functionalTest/resources/handlers/writefinaldecision/ucAllowedNoSupportGroupZeroPointsSch8Para4AndSch9Para4AppliesCallback.json
+++ b/src/functionalTest/resources/handlers/writefinaldecision/ucAllowedNoSupportGroupZeroPointsSch8Para4AndSch9Para4AppliesCallback.json
@@ -59,6 +59,7 @@
         }
       ],
       "ucWriteFinalDecisionSchedule7ActivitiesApply":"No",
+      "ucWriteFinalDecisionWorkCapabilityAssessmentStartDate" : "2025-11-18",
       "writeFinalDecisionAnythingElse":"Anything else",
       "subscriptions":{
         "appellantSubscription":{
