--- a/src/functionalTest/resources/handlers/writefinaldecision/ucAllowedNoSupportGroupLessThan15PointsSch8Para4AndSch9Para4AppliesCallback.json
+++ b/src/functionalTest/resources/handlers/writefinaldecision/ucAllowedNoSupportGroupLessThan15PointsSch8Para4AndSch9Para4AppliesCallback.json
@@ -60,6 +60,7 @@
       ],
       "ucWriteFinalDecisionSchedule7ActivitiesApply":"No",
       "writeFinalDecisionAnythingElse":"Anything else",
+      "ucWriteFinalDecisionWorkCapabilityAssessmentStartDate" : "2025-11-18",
       "subscriptions":{
         "appellantSubscription":{
           "tya":"0oGRulRKtA",
