--- a/src/functionalTest/resources/handlers/writefinaldecision/ucDwpReassessTheAwardCallback.json
+++ b/src/functionalTest/resources/handlers/writefinaldecision/ucDwpReassessTheAwardCallback.json
@@ -59,6 +59,7 @@
         }
       ],
       "ucWriteFinalDecisionSchedule7ActivitiesApply":"No",
+      "ucWriteFinalDecisionWorkCapabilityAssessmentStartDate" : "2025-11-18",
       "writeFinalDecisionAnythingElse":"Anything else",
       "subscriptions":{
         "appellantSubscription":{
