Add readiness and liveness delays for am-role-assignment-service

--- a/charts/sscs-tribunals-api/values.wa.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.wa.preview.template.yaml
@@ -326,6 +326,8 @@ ccd:
 
   am-role-assignment-service:
     java:
+      readinessDelay: 60
+      livenessDelay: 60
       ingressHost: am-role-assignment-service-${SERVICE_FQDN}
       autoscaling:
         enabled: false
